# fastnode

./: .gitignore  .sesskey  README.md  main.py  pyproject.toml
core/: executor.py  model_cache.py  ws_handlers.py
core/nodes/: __init__.py
core/nodes/image_gen/: display_image.py  generate_image.py  image_model_selector.py  local_image_gen.py  model_loader.py
core/nodes/llm/: generate_llm_response.py
core/nodes/math/: sum.py
core/nodes/number/: __init__.py  number.py  number3.py
core/nodes/text/: display_text.py  input_textarea.py
utils/: format_json_workflow.py  ws.py
workflows/: default.json  default_legacy.json  default_missing.json  l1.json  l2.json  l4.json  l5.json  l6.json  llm-test.json  t5.json
